CHATS_SIT/force-app/main/default/objects/Canned_Report_Filter__mdt.object
<CustomObject>
    <fields>
        <fullName>Canned_Report__c</fullName>
        <label>Canned Report</label>
        <referenceTo>Canned_Report__mdt</referenceTo>
        <relationshipLabel>Canned Report Filters</relationshipLabel>
        <relationshipName>Canned_Report_Filters</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <label>Field Api Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Data_Type__c</fullName>
        <inlineHelpText>if configuring Month/Year type, please make sure the month picklist starts from 1 for Junary and not 0</inlineHelpText>
        <label>Field Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                    <default>true</default>
                    <label>Checkbox</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>REFERENCE</fullName>
                    <label>lookup</label>
                </value>
                <value>
                    <fullName>PICKLIST</fullName>
                    <label>Picklist</label>
                </value>
                <value>
                    <fullName>MULTIPICKLIST</fullName>
                    <label>Picklist(Multi-Select)</label>
                </value>
                <value>
                    <fullName>STRING</fullName>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Month/Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operators__c</fullName>
        <inlineHelpText>Enter all operators to be displayed separated by semi-colon</inlineHelpText>
        <label>Operators</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <inlineHelpText>Enter the options in case the field type is picklist</inlineHelpText>
        <label>Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tool_Tip__c</fullName>
        <label>Tool Tip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentObjectName__c</fullName>
        <label>parentObjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterIndex__c</fullName>
        <label>FilterIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Canned Report Filter</label>
    <pluralLabel>Canned Report Filters</pluralLabel>
</CustomObject>